# bytewax

./: .cbfmt.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  Dockerfile.Colab  Dockerfile.pdoc  Dockerfile.release  LICENSE  MAINTAINERS.md  PROFILING.md  README.md  RELEASE.md  build.requirements.txt  conftest.py  dev.requirements.txt  docs-entrypoint.sh  entrypoint-recovery.sh  entrypoint.sh  iter-test.py  justfile  pdocs.sh  pyproject.toml  recovery_wordcount.py  requirements.txt  rust-toolchain.toml  setup.cfg  stubgen.py  vermin-dev.ini  vermin-lib.ini  vermin.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: CD.yml  CI.yml  benches.yml  build-wheels.yml  issue_automation.yml  stale.yml  triage.yml  windows.yml
apidocs/: Dockerfile  Pipfile  README.md  autobuild.sh  build.sh  conf.py  entrypoint.sh  generate.py  index.md  renderer.py  requirements.txt
apidocs/_static/: custom.css
apidocs/html/: README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  writing-docs.html
apidocs/templates/: config.mako  html.mako
benches/: benchmarks.rs
benches/benchmarks/: wordcount_bytewax.py  wordcount_python.py
deployment/: stack.yaml
docs/: Pipfile  autobuild.sh  conf.py  conftest.py  index.md  intersphinxdump.py  renderer.py  requirements.txt  writing-docs.md
docs-sphinx/: Pipfile  conf.py  requirements.txt
docs-sphinx/_templates/: navigation.html
docs/_templates/: layout.html  slack-footer.html
docs/articles/: index.md  metadata.json  metadata.md
docs/examples/: cart-join.json  cart-join.md  crypto-sockets.json  crypto-sockets.md  event-processing.md  kafka-enrichment.md  metadata.json  requirements-ke.txt  search-session.md  search_session.md  sensor-data.md
docs/guide/: index.md
docs/tutorial/: index.md
docs/tutorials/: index.md
docs/user_guide/: index.md
errors_examples/: README.md  common.py  input_crash.py  input_wrong_type.py  map_error.py  missing_input.py  missing_output.py  setup_tracing_twice.py  working.py
examples/: 1brc.py  advanced_recovery.py  anomaly_detector.py  apriori.py  basic.py  batch_operator.py  batch_output.py  benchmark_windowing.py  bigquery_out.py  confluent_serde.py  csv_input.py  custom_metrics.py  duckdb_dataflow.py  dynamodb.py  dynamodb_example.py  event_time_processing.py  events_to_parquet.py  foo.py  hn_scraper.py  join.py  k8s_cluster.py  manual_cluster.py  motherduck_dataflow.py  mqtt_input.py  msgspec_serde.py  next_awake.py  orderbook.py  pagerank.py  partials.py  periodic_input.py  poll_and_split.py  recovery_wordcount.py  redpanda_anomaly_detection.py  redpanda_schema_registry.py  redpanda_serde.py  requirements.txt  resampler.py  schema_registry.py  schema_registry_confluent.py  schema_registry_redpanda.py  (+15 more)
examples/azure_ai_search/: README.md
examples/clickhouse/: metrics.py
examples/errors/: README.md  input_crash.py  input_wrong_type.py  map_error.py  missing_input.py  missing_output.py  setup_tracing_twice.py  stateful_input_error.py  stateful_map_error.py  working.py
examples/feast/: .feastignore  README.md  docker-compose.yml  feast_dataflow.py  feature_store.yaml  feature_view.py  requirements.txt
examples/influxdb/: input.py  output.py
examples/redis/: redis_connector.py
examples/rerun/: basic.py  bytewax_metrics.py
examples/sample_data/: apriori.txt  collected-works.txt  driver_stats.parquet  easy_count.txt  ec2_metrics.csv  graph.txt  lyrics.txt  metrics.csv  simple.json
examples/utils/: docker-compose.yml  fake_events.py  kafka-server.properties  topics_helper.py  twitter.py
migrations/: 20230206170933_initial.sql
pyexamples/: anomaly_detector.py  basic.py  events_to_parquet.py  pagerank.py  search_session.py  stateful.py  subflow.py  translator.py  twitter_stream.py  wikistream.py  wordcount.py
pyexamples/sample_data/: wordcount.txt
pyexamples/utils/: fake_events.py  twitter.py
pysrc/bytewax/: __init__.py  _bytewax.pyi  _capture_aiter.py  _encoder.py  _metrics.py  _utils.py  backup.py  bytewax.pyi  dataflow.py  dynamodb_output.py  encoder.py  errors.py  execution.py  exhash.py  inp.py  inputs.py  metrics.py  operators.py  outputs.py  parse.py  processes.py  recovery.py  run.py  serde.py  testing.py  tracing.py  visualize.py  window.py  windowing.py
pysrc/tiny_dancer/: __init__.py
pytests/: conftest.py  test_dataflow.py  test_encoder.py  test_event_time.py  test_exceptions.py  test_execution.py  test_exhash.py  test_finalization.py  test_inputs.py  test_integration.py  test_next_awake.py  test_operators.py  test_outputs.py  test_parse.py  test_recovery.py  test_run.py  test_testing.py  test_version.py  test_visualize.py  test_window.py
pytests/azure_ai_search/: test_azure_ai_search.py
pytests/benchmarks/: test_branch_operator.py  test_flat_map_batch_operator.py  test_windowing.py
pytests/connectors/: test_demo.py  test_files.py  test_kafka.py  test_kafka_unit.py  test_sql.py  test_stdio.py
requirements/: build-py3.10.txt  build-py3.11.txt  build-py3.12.txt  build-py3.13.txt  build-py3.14.txt  build-py3.8.txt  build-py3.9.txt  build.in  compile.sh  dev.in  dev.txt  doc.in  doc.txt  docs.in  docs.txt  doctest.in  lib-py3.10.txt  lib-py3.11.txt  lib-py3.12.txt  lib-py3.13.txt  lib-py3.14.txt  lib-py3.8.txt  lib-py3.9.txt  library.txt  pre-commit.in  pre-commit.txt  requirements-docs-dev.txt  requirements-docs.txt  requirements-hatch-static-analysis.txt  requirements-lint.txt  requirements-test.py3.10.txt  requirements-test.py3.11.txt  requirements-test.py3.12.txt  requirements-test.py3.8.txt  requirements-test.py3.9.txt  test-py3.10.txt  test-py3.11.txt  test-py3.12.txt  test-py3.8.txt  test-py3.9.txt  (+2 more)
scripts/: ci-kafka.sh
src/: common.rs  dataflow.rs  errors.rs  inputs.rs  lib.rs  macros.rs  operators.rs  outputs.rs  pyo3_extensions.rs  recovery.rs  run.rs  serde.rs  timely.rs  worker.rs
(+414 files in other folders)
