[package]
name = "bytewax"
version = "0.16.2"
edition = "2021"

[lib]
name = "bytewax"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.5.17" }
bincode = { version = "1.3.3" }
chrono = { version = "0.4", default_features = false, features = ["clock", "serde"] }
fastrand = { version = "1.9.0" }
num = { version = "0.4.0" }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11", features = ["trace", "reqwest-client", "grpc-tonic"] }
pyo3 = { version = "0.19.2", features = ["macros", "chrono"] }
rusqlite = { version = "0.29.0", features = ["bundled", "series"] }
rusqlite_migration = { version = "1.0.2" }
seahash = { version = "4.1.0" }
serde = { version = "1.0.134", features = ["derive"] }
serde_json = { version = "1.0.96" }
serde_test = { version = "1.0.134" }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow.git", rev = "432ef57", features = ["bincode"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "0.18" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pyo3 = { version = "0.19.2", default-features = false, features = ["macros", "chrono"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[patch.crates-io]
# Remove once 0.30.0 comes out. Contains
# https://github.com/rusqlite/rusqlite/pull/1357
rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", rev = "7b0393210be4bce17156a08fde732083d6342a75" }
