[project]
name = "bytewax"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "typing_extensions>=4",
    "prometheus-client>=0.18"
]

extras = [
    "azure-ai",
    "clickhouse",
    "duckdb",
    "influxdb",
    "kafka",
    "redis",
    "rerun",
]

[project.optional-dependencies]
azure-ai = [
  "azure-search-documents==11.5.1",
  "python-dotenv",
  "azure-common==1.1.28",
  "azure-core==1.30.2",
  "openai==1.44.1",
  "types-requests",
  "trafilatura==1.12.1",
]
clickhouse = [
    "clickhouse-connect==0.7.19",
    "pyarrow==16.1.0",
]
duckdb = [
    "pyarrow>=17.0.0",
    "duckdb==1.1.3",
]
influxdb = [
    "influxdb3-python==0.8.0",
]
kafka = [
    "requests>=2.0",
    "fastavro>=1.8",
    "confluent-kafka>=2.0.2",
]
redis = [
    "redis[hiredis]>=5.0",
]
rerun = [
    "rerun-sdk>=0.18",
]

[project.urls]
"Source Code" = "https://github.com/bytewax/bytewax"
Issues = "https://github.com/bytewax/bytewax/issues"
Documentation = "https://docs.bytewax.io/"
Changelog = "https://github.com/bytewax/bytewax/blob/main/CHANGELOG.md"

[metadata]
long_description = "file: README.md"
long_description_content_type = "text/markdown"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "bytewax._bytewax"
python-source = "pysrc"

[tool.pytest.ini_options]
addopts = "-v"

[tool.mypy]
# TODO: Turn this on to typecheck all tests.
# check_untyped_defs = true
# TODO: Also consider
# disallow_untyped_calls = true

# TODO: See if we can get
# https://github.com/benbenbang/types-confluent-kafka fixed up to work
# here.
[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpickle.*"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "I",
    "PL",
    "W",
]
ignore = [
    "D105",
    "E731",
    "PLR",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["D"]
"pytests/test_flows/*.py" = ["D"]
"test_*.py" = ["D"]
# Because it has huge literals in it.
"pytests/test_visualize.py" = ["E501"]
